--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -8,7 +8,10 @@ RUN npm run build
 
 # Serve
 FROM nginx:1.25-alpine
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf.template /etc/nginx/templates/default.conf.template
 COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
 
+ENV API_HOST=api \
+    API_PORT=8000
+
+EXPOSE 80
