--- a/incident-logger-chart/templates/frontend-deployment.yaml
+++ b/incident-logger-chart/templates/frontend-deployment.yaml
@@ -25,6 +25,11 @@ spec:
           ports:
             - containerPort: {{ .Values.frontend.service.port }}
               name: http
+          env:
+            - name: API_HOST
+              value: {{ include "incident-logger.fullname" . }}-api
+            - name: API_PORT
+              value: "{{ .Values.backend.service.port }}"
           resources:
             requests:
               memory: {{ .Values.frontend.resources.requests.memory }}
