--- a/incident-logger-chart/templates/frontend-deployment.yaml
+++ b/incident-logger-chart/templates/frontend-deployment.yaml
@@ -18,6 +18,10 @@ spec:
         {{- include "incident-logger.selectorLabels" . | nindent 8 }}
         component: frontend
     spec:
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml .Values.imagePullSecrets | nindent 8 }}
+      {{- end }}
       containers:
         - name: frontend
           image: {{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}
